Implements correction doughnt chart + spacing

--- a/app/assets/stylesheets/components/_dashboard-upper-part-card.scss
+++ b/app/assets/stylesheets/components/_dashboard-upper-part-card.scss
@@ -14,5 +14,5 @@
     flex-grow: 1;
     font-family: "Work Sans", "Helvetica", "sans-serif";
     font-weight: 600;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
 }
